--- a/src/Esqueleto.css
+++ b/src/Esqueleto.css
@@ -1934,8 +1934,8 @@ pre code {
 .form-control {
 	display: block;
 	width: 100%;
-	height: calc(1.5em + .75rem + 2px);
-	padding: .375rem .75rem;
+
+	padding: .2rem 18rem;
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1.5;
